# docs/swagger.yaml
@@ -7,10 +7,88 @@ info:
   contact:
     name: Mikhail Vakhrushin
     email: lstwrd@yandex.com
-  version: '0.9.6'
+  version: 0.9.6
 host: 212.233.78.3:8080
 basePath: /v1
 paths:
+  /api/emojis/get/{id}:
+    get:
+      tags:
+        - API
+      summary: Получить изображение по идентификатору
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request - Invalid input or content type
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: Bad Request - Invalid input or content type
+          schema:
+            $ref: '#/definitions/Error'
+  /api/emojis/put:
+    put:
+      security:
+        - JWT: []
+      tags:
+        - API
+      summary: Upload  image
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - name: image
+          in: formData
+          description: The image file to upload
+          required: true
+          type: file
+      responses:
+        '201':
+          description: Successful upload
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                description: Successful upload message
+              status_code:
+                type: integer
+                description: HTTP status code
+                example: 201
+              avatar_url:
+                type: string
+                example: https://{BaseURL}/v1/api/emojis/get/{encryptedID}
+        '400':
+          description: Unsuccessful upload
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                description: Unsuccessful upload
+              status_code:
+                type: integer
+                description: HTTP status code
+                example: 400
+        '500':
+          description: Server error
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                description: Unsuccessful upload
+              status_code:
+                type: integer
+                description: HTTP status code
+                example: 500
   /dev/confirmation-code/get:
     get:
       tags:
@@ -422,7 +500,7 @@ paths:
           description: Expense category creation request payload
           required: true
           schema:
-            $ref: '#/definitions/ExpenseCategory'
+            $ref: '#/definitions/models.ExpenseCategory'
       responses:
         '201':
           description: Successfully created an expense category
@@ -460,7 +538,7 @@ paths:
           description: Income category creation request payload
           required: true
           schema:
-            $ref: '#/definitions/IncomeCategory'
+            $ref: '#/definitions/models.IncomeCategory'
       responses:
         '201':
           description: Successfully created an income category
@@ -924,6 +1002,26 @@ paths:
             Header to point in which currency we need to convert money. If empty
             all in RUB. There are 3 currencies(EUR,USD,RUB)
           required: false
+        - name: limit
+          in: query
+          description: Number of operations to retrieve (default is 20)
+          required: false
+          type: integer
+        - name: offset
+          in: query
+          description: Number of operations to skip (default is 0)
+          required: false
+          type: integer
+        - name: start_date
+          in: query
+          description: Default is 30 days ago
+          required: false
+          type: string
+        - name: end_date
+          in: query
+          description: Default is now
+          required: false
+          type: string
       responses:
         '200':
           description: Successfully retrieved the user profile
@@ -933,6 +1031,8 @@ paths:
               status_code:
                 type: integer
               message:
+                type: string
+              response_currency:
                 type: string
               profile:
                 $ref: '#/definitions/Analytics'
@@ -959,6 +1059,16 @@ paths:
             Header to point in which currency we need to convert money. If empty
             all in RUB. There are 3 currencies(EUR,USD,RUB)
           required: false
+        - name: limit
+          in: query
+          description: Number of operations to retrieve (default is 20)
+          required: false
+          type: integer
+        - name: offset
+          in: query
+          description: Number of operations to skip (default is 0)
+          required: false
+          type: integer
       responses:
         '200':
           description: Successfully retrieved the user profile
@@ -968,6 +1078,8 @@ paths:
               status_code:
                 type: integer
               message:
+                type: string
+              response_currency:
                 type: string
               profile:
                 $ref: '#/definitions/Tracker'
@@ -1051,6 +1163,8 @@ paths:
             $ref: '#/definitions/Error'
   /profile/image/put:
     put:
+      security:
+        - JWT: []
       tags:
         - Profile
       summary: Upload user image
@@ -1060,11 +1174,6 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: Authorization
-          in: header
-          description: Bearer token for user authentication
-          required: true
-          type: string
         - name: image
           in: formData
           description: The image file to upload
@@ -1112,7 +1221,7 @@ paths:
                 example: 500
   /profile/image/get/{id}:
     get:
-      tags: 
+      tags:
         - Profile
       summary: Получить изображение по идентификатору
       parameters:
@@ -1599,6 +1708,12 @@ definitions:
         type: boolean
       user_id:
         type: string
+      bank_account:
+        type: string
+      sent_to:
+        type: string
+      currency:
+        type: string
   models.ExpenseCategory:
     type: object
     properties:
@@ -1639,6 +1754,12 @@ definitions:
       planned:
         type: boolean
       user_id:
+        type: string
+      bank_account:
+        type: string
+      sender:
+        type: string
+      currency:
         type: string
   models.IncomeCategory:
     type: object
@@ -1689,8 +1810,14 @@ definitions:
       id:
         type: string
       planned:
-        $ref: '#/definitions/models.WelfareFund'
+        type: boolean
       user_id:
+        type: string
+      bank_account:
+        type: string
+      currency:
+        type: string
+      category_id:
         type: string
   models.WelfareFund:
     type: integer
@@ -1722,11 +1849,11 @@ definitions:
   profile.UserProfile:
     type: object
     properties:
-      username:
+      surname:
         type: string
       name:
         type: string
-      userID:
+      user_id:
         type: string
       avatar_url:
         type: string
